refactor: 2단계 PR 코멘트 반영